--- a/debian/rules
+++ b/debian/rules
@@ -7,20 +7,25 @@ export SHELL = /bin/bash
 #export DH_VERBOSE=1
 
 DEB_HOST_ARCH := $(shell dpkg-architecture -qDEB_HOST_ARCH)
+DEB_HOST_MULTIARCH := $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
 changelog_values := $(shell dpkg-parsechangelog \
 			| awk '/^(Version|Source):/ {print $$2}')
 PKGSOURCE  := $(word 1, $(changelog_values))
 PKGVERSION := $(word 2, $(changelog_values))
 
-distribution := $(shell lsb_release -is)
+distribution := $(shell dpkg-vendor --query Vendor)
 
 export VER=2.7
 export NVER=2.8
 export PVER=python2.7
 
 PREVVER	:= $(shell awk '/^python/ && NR > 1 {print substr($$2,2,length($$2)-2); exit}' debian/changelog)
-PREVVER := 2.7.3-1~
+# first version with Multi-Arch: allowed
+PREVVER := 2.7.8-1~
+
+# not yet allowed
+ma_allowed	= yes
 
 PWD		:= $(shell pwd)
 
@@ -45,10 +50,10 @@ stamp-build:
 stamp-doc-policy:
 	debiandoc2text debian/python-policy.sgml
 	mv -f python-policy.txt debian/
-	debiandoc2html debian/python-policy.sgml
+	debiandoc2html -l en.UTF-8 debian/python-policy.sgml
 	rm -rf debian/python-policy.html
 	mv -f python-policy.html debian/
-	make -C pydist README.PyDist.html
+	make -C pydist
 	touch stamp-doc-policy
 
 stamp-doc: stamp-doc-policy
@@ -59,7 +64,9 @@ control-file:
 	    -e "s/@NVER@/$(NVER)/g" \
 	    -e "s/@VER@/$(VER)/g" \
 	    -e "s/@PREVVER@/$(PREVVER)/g" \
-		<debian/control.in >debian/control.tmp
+		<debian/control.in \
+	    $(if $(ma_allowed),,| grep -v '^Multi-Arch: allowed$$') \
+		>debian/control.tmp
 ifeq ($(distribution),Ubuntu)
   ifneq (,$(findstring ubuntu, $(PKGVERSION)))
 	m='Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>'; \
@@ -74,6 +81,7 @@ endif
 
 faqs = index general programming library extending windows gui installed
 get-faq:
+	# Note: This rule is broken due to web site reorg at python.org
 	rm -rf faq
 	mkdir faq
 	cd faq && \
@@ -88,6 +96,27 @@ get-faq:
 	) >> faq/FAQ.ht
 	rm -f faq/index.ht
 
+make-faq:
+	set -e; \
+	cd faq && \
+	for p in *.ht; do \
+	  p=`basename $$p .ht`; \
+	  echo $(rst2html) $$p.ht $$p.html; \
+	  awk 'NR > 2' $$p.ht > $$p.ht2; \
+	  $(rst2html) $$p.ht2 $$p.html; \
+	  rm -f $$p.ht2; \
+	done
+
+MANPAGES ?= dh_python2.1 pycompile.1 pyclean.1
+
+%.1: %.rst
+	rst2man $< > $@
+
+# Manually run this rule if there is a need to update the dh_python2 man pages
+make-man: $(MANPAGES)
+	cd pydist && \
+	rst2html README.PyDist > README.PyDist.html
+
 clean: control-file
 	dh_testdir
 	dh_testroot
@@ -96,7 +125,6 @@ clean: control-file
 
 	rm -f debian/python-policy.txt
 	rm -rf debian/python-policy.html
-	rm -f faq/*.h2 faq/*.html
 
 	set -e;\
 	for f in debian/*.in; do \
@@ -134,11 +162,7 @@ stamp-install: stamp-build control-file stamp-control
 	cd faq && \
 	for p in *.ht; do \
 	  p=`basename $$p .ht`; \
-	  echo $(rst2html) $$p.ht $$p.html; \
-	  awk 'NR > 2' $$p.ht > $$p.ht2; \
-	  $(rst2html) $$p.ht2 $$p.html; \
 	  mv $$p.html ../debian/python/usr/share/doc/python/faq/; \
-	  rm -f $$p.ht2; \
 	done
 	mv debian/python/usr/share/doc/python/faq/FAQ.html \
 		debian/python/usr/share/doc/python/
@@ -149,9 +173,9 @@ stamp-dh_python:
 	dh_testdir
 	dh_testroot
 	dh_installdirs
-	make check_versions
+	-make check_versions
 	DESTDIR=debian/python PREFIX=/usr make install-dev
-	DESTDIR=debian/python-minimal PREFIX=/usr make install-runtime manpages
+	DESTDIR=debian/python-minimal PREFIX=/usr make install-runtime
 	# disabled by default, run manually if you want to update it
 	# (requires apt-file and network connection)
 	#make -C pydist dist_fallback
@@ -162,6 +186,53 @@ binary-indep: build install stamp-doc
 	dh_testdir -i
 	dh_testroot -i
 	dh_installman -i
+
+ifeq ($(with_doc),yes)
+	mkdir -p debian/python-doc/usr/share/doc/python
+	ln -sf ../python$(VER)-doc/html \
+		debian/python-doc/usr/share/doc/python/html
+	mkdir -p debian/python-doc/usr/share/doc/python-doc
+	ln -sf ../python$(VER)-doc/html \
+		debian/python-doc/usr/share/doc/python-doc/html
+endif
+
+	: # provide the idle and idle.1 defaults
+	mkdir -p debian/idle/usr/bin
+	install -m 755 debian/idle.py debian/idle/usr/bin/idle
+
+	mkdir -p debian/idle/usr/share/man/man1
+	install -m 644 debian/idle.1 debian/idle/usr/share/man/man1/idle.1
+
+	mkdir -p debian/idle/usr/share/pixmaps
+	ln -sf python.xpm debian/idle/usr/share/pixmaps/idle.xpm
+
+	mkdir -p debian/idle/usr/share/applications
+	cp -p debian/idle.desktop debian/idle/usr/share/applications/
+
+#	dh_installdebconf -i $(NOPKGS)
+	dh_lintian -i
+	dh_installdocs -i $(NOPKGS) --all debian/README.Debian
+	dh_installmenu -i $(NOPKGS)
+	dh_installchangelogs -i $(NOPKGS)
+
+	for p in examples idle; do \
+	  [ $$p = idle ] || p=python-$$p; \
+	  rm -rf debian/$$p/usr/share/doc/$$p; \
+	  ln -sf python debian/$$p/usr/share/doc/$$p; \
+	done
+
+	dh_compress -i $(NOPKGS)
+	dh_fixperms -i $(NOPKGS)
+	dh_installdeb -i $(NOPKGS)
+	dh_gencontrol -i $(NOPKGS)
+	dh_md5sums -i $(NOPKGS)
+	dh_builddeb -i $(NOPKGS)
+
+# Build architecture-dependent files here.
+binary-arch: build install stamp-doc
+	dh_testdir -a
+	dh_testroot -a
+	dh_installman -a
 
 	: # provide the python and python.1 defaults
 	mkdir -p debian/python-minimal/usr/bin
@@ -226,29 +297,42 @@ binary-indep: build install stamp-doc
 		debian/python/usr/share/doc/python$(VER)/python-policy.$$ext; \
 	done
 
-ifeq ($(with_doc),yes)
-	mkdir -p debian/python-doc/usr/share/doc/python
-	ln -sf ../python$(VER)-doc/html \
-		debian/python-doc/usr/share/doc/python/html
-	mkdir -p debian/python-doc/usr/share/doc/python-doc
-	ln -sf ../python$(VER)-doc/html \
-		debian/python-doc/usr/share/doc/python-doc/html
-endif
-
 	mkdir -p debian/python/usr/share/apps/konsole
 	cp -p debian/python.desktop debian/python/usr/share/apps/konsole/
 
 	: # provide the python-config default
 	mkdir -p debian/python-dev/usr/bin
 	ln -sf python$(VER)-config debian/python-dev/usr/bin/python-config
+	ln -sf python$(VER)-config debian/python-dev/usr/bin/python2-config
+	mkdir -p debian/python-dev/usr/share/man/man1
+	ln -sf python$(VER)-config.1.gz \
+		debian/python-dev/usr/share/man/man1/python-config.1.gz
+	ln -sf python$(VER)-config.1.gz \
+		debian/python-dev/usr/share/man/man1/python2-config.1.gz
+
+	: # provide pkgconfig defaults
+	mkdir -p debian/python-dev/usr/lib/$(DEB_HOST_MULTIARCH)/pkgconfig
+	ln -sf python-$(VER).pc debian/python-dev/usr/lib/$(DEB_HOST_MULTIARCH)/pkgconfig/python.pc
+	ln -sf python.pc debian/python-dev/usr/lib/$(DEB_HOST_MULTIARCH)/pkgconfig/python2.pc
+	mkdir -p debian/python-dbg/usr/lib/$(DEB_HOST_MULTIARCH)/pkgconfig
+	ln -sf python-$(VER)-dbg.pc debian/python-dbg/usr/lib/$(DEB_HOST_MULTIARCH)/pkgconfig/python-dbg.pc
+	ln -sf python-dbg.pc debian/python-dbg/usr/lib/$(DEB_HOST_MULTIARCH)/pkgconfig/python2-dbg.pc
 
 	: # provide the python-dbg and python-dbg.1 defaults
 	mkdir -p debian/python-dbg/usr/bin
 	ln -sf python$(VER)-dbg debian/python-dbg/usr/bin/python-dbg
+	ln -sf python$(VER)-dbg debian/python-dbg/usr/bin/python2-dbg
 	ln -sf python$(VER)-dbg-config debian/python-dbg/usr/bin/python-dbg-config
+	ln -sf python$(VER)-dbg-config debian/python-dbg/usr/bin/python2-dbg-config
 	mkdir -p debian/python-dbg/usr/share/man/man1
 	ln -sf python$(VER)-dbg.1.gz \
 		debian/python-dbg/usr/share/man/man1/python-dbg.1.gz
+	ln -sf python$(VER)-dbg.1.gz \
+		debian/python-dbg/usr/share/man/man1/python2-dbg.1.gz
+	ln -sf python$(VER)-dbg-config.1.gz \
+		debian/python-dbg/usr/share/man/man1/python-dbg-config.1.gz
+	ln -sf python$(VER)-dbg-config.1.gz \
+		debian/python-dbg/usr/share/man/man1/python2-dbg-config.1.gz
 	mkdir -p debian/python-dbg/usr/share/doc/python
 	ln -sf ../python$(VER)/SpecialBuilds.txt.gz \
 		debian/python-dbg/usr/share/doc/python/SpecialBuilds.txt.gz
@@ -259,37 +343,54 @@ endif
 	cp -p debian/valgrind-python.supp \
 		debian/python/usr/lib/valgrind/python.supp
 
-	: # provide the idle and idle.1 defaults
-	mkdir -p debian/idle/usr/bin
-	install -m 755 debian/idle.py debian/idle/usr/bin/idle
+	: # provide the DEB_HOST_GNU_TYPE/DEB_HOST_MULTIRACH python-config defaults
+	mkdir -p debian/libpython-dev/usr/bin
+	ln -sf $(DEB_HOST_MULTIARCH)-python$(VER)-config \
+		debian/libpython-dev/usr/bin/$(DEB_HOST_MULTIARCH)-python-config
+	mkdir -p debian/libpython-dev/usr/share/man/man1
+	ln -sf $(DEB_HOST_MULTIARCH)-python$(VER)-config.1.gz \
+		debian/libpython-dev/usr/share/man/man1/$(DEB_HOST_MULTIARCH)-python-config.1.gz
+ifneq ($(DEB_HOST_MULTIARCH),$(DEB_HOST_GNU_TYPE))
+	ln -sf $(DEB_HOST_GNU_TYPE)-python$(VER)-config \
+		debian/libpython-dev/usr/bin/$(DEB_HOST_GNU_TYPE)-python-config
+	ln -sf $(DEB_HOST_GNU_TYPE)-python$(VER)-config.1.gz \
+		debian/libpython-dev/usr/share/man/man1/$(DEB_HOST_GNU_TYPE)-python-config.1.gz
+endif
 
-	mkdir -p debian/idle/usr/share/man/man1
-	install -m 644 debian/idle.1 debian/idle/usr/share/man/man1/idle.1
+	mkdir -p debian/libpython-dbg/usr/bin
+	ln -sf $(DEB_HOST_MULTIARCH)-python$(VER)-dbg-config \
+		debian/libpython-dbg/usr/bin/$(DEB_HOST_MULTIARCH)-python-dbg-config
+	mkdir -p debian/libpython-dbg/usr/share/man/man1
+	ln -sf $(DEB_HOST_MULTIARCH)-python$(VER)-dbg-config.1.gz \
+		debian/libpython-dbg/usr/share/man/man1/$(DEB_HOST_MULTIARCH)-python-dbg-config.1.gz
+ifneq ($(DEB_HOST_MULTIARCH),$(DEB_HOST_GNU_TYPE))
+	ln -sf $(DEB_HOST_GNU_TYPE)-python$(VER)-dbg-config \
+		debian/libpython-dbg/usr/bin/$(DEB_HOST_GNU_TYPE)-python-dbg-config
+	ln -sf $(DEB_HOST_GNU_TYPE)-python$(VER)-dbg-config.1.gz \
+		debian/libpython-dbg/usr/share/man/man1/$(DEB_HOST_GNU_TYPE)-python-dbg-config.1.gz
+endif
 
-	mkdir -p debian/idle/usr/share/pixmaps
-	ln -sf python.xpm debian/idle/usr/share/pixmaps/idle.xpm
+	dh_lintian -a
+	dh_installdocs -a $(NOPKGS) --all debian/README.Debian
+	dh_installmenu -a $(NOPKGS)
+	dh_installchangelogs -a $(NOPKGS)
 
-	mkdir -p debian/idle/usr/share/applications
-	cp -p debian/idle.desktop debian/idle/usr/share/applications/
-
-#	dh_installdebconf -i $(NOPKGS)
-	dh_lintian -i
-	dh_installdocs -i $(NOPKGS) --all debian/README.Debian
-	dh_installmenu -i $(NOPKGS)
-	dh_installchangelogs -i $(NOPKGS)
-
-	for p in all all-dev all-dbg dbg dev examples idle; do \
+	for p in all all-dev all-dbg dbg dev; do \
 	  [ $$p = idle ] || p=python-$$p; \
 	  rm -rf debian/$$p/usr/share/doc/$$p; \
 	  ln -sf python debian/$$p/usr/share/doc/$$p; \
 	done
+	rm -rf debian/libpython-all-dev/usr/share/doc/libpython-all-dev
+	ln -sf libpython-dev debian/libpython-all-dev/usr/share/doc/libpython-all-dev
+	rm -rf debian/libpython-all-dbg/usr/share/doc/libpython-all-dbg
+	ln -sf libpython-dbg debian/libpython-all-dbg/usr/share/doc/libpython-all-dbg
 
-	dh_compress -i $(NOPKGS)
-	dh_fixperms -i $(NOPKGS)
-	dh_installdeb -i $(NOPKGS)
-	dh_gencontrol -i $(NOPKGS)
-	dh_md5sums -i $(NOPKGS)
-	dh_builddeb -i $(NOPKGS)
+	dh_compress -a $(NOPKGS)
+	dh_fixperms -a $(NOPKGS)
+	dh_installdeb -a $(NOPKGS)
+	dh_gencontrol -a $(NOPKGS)
+	dh_md5sums -a $(NOPKGS)
+	dh_builddeb -a $(NOPKGS)
 
 # Build architecture-dependent files here.
 binary-arch: build install
