--- a/debian/control.in
+++ b/debian/control.in
@@ -3,8 +3,12 @@ Section: python
 Priority: optional
 Maintainer: Matthias Klose <doko@debian.org>
 Uploaders: Scott Kitterman <scott@kitterman.com>, Piotr Ożarowski <piotr@debian.org>, Barry Warsaw <barry@debian.org>
-Build-Depends: debhelper (>= 8~), python-all, debiandoc-sgml
-Standards-Version: 3.9.5
+Build-Depends: debhelper (>= 8~), @bd_i586@,
+  lsb-release,
+  python-all,
+  @PVER@ (>= @PREVVER@),
+  debiandoc-sgml,
+Standards-Version: 3.9.6
 Homepage: http://www.python.org/
 Vcs-Bzr: http://alioth.debian.org/anonscm/bzr/pkg-python/python-defaults-debian
 Vcs-Browser: http://alioth.debian.org/scm/loggerhead/pkg-python/python-defaults-debian/files
@@ -13,7 +17,8 @@ Package: python
 Architecture: any
 Multi-Arch: allowed
 Priority: standard
-Depends: ${misc:Depends}, @PVER@ (>= @PREVVER@), python-minimal (= ${binary:Version}), libpython-stdlib (= ${binary:Version})
+Pre-Depends: python-minimal (= ${binary:Version})
+Depends: ${misc:Depends}, @PVER@ (>= @PREVVER@), libpython-stdlib (= ${binary:Version})
 Suggests: python-doc (= ${binary:Version}), python-tk (>= @PREVVER@)
 Conflicts: python-central (<< 0.5.5)
 Breaks: update-manager-core (<< 0.200.5-2)
